fix/Increase z-index of popover to 3

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -12,7 +12,7 @@
   position: -webkit-sticky; /* Safari */
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 3;
   margin-bottom: $topbar-margin;
 }
 
